--- a/cropper/build.gradle
+++ b/cropper/build.gradle
@@ -1,24 +1,21 @@
 apply plugin: 'com.android.library'
 // https://docs.gradle.org/current/userguide/publishing_maven.html
 // http://www.flexlabs.org/2013/06/using-local-aar-android-library-packages-in-gradle-builds
-apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'maven-publish'
-
-group='com.github.halwhen'
 
 android {
 
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 24
         targetSdkVersion rootProject.compileSdkVersion
         versionCode 1
         versionName PUBLISH_VERSION
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     lintOptions {
         abortOnError false
@@ -45,7 +42,7 @@ publishing {
 apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
 
 dependencies {
-    api "androidx.appcompat:appcompat:$androidXLibraryVersion"
+    api "androidx.appcompat:appcompat:$androidXAppCompatVersion"
     implementation "androidx.exifinterface:exifinterface:$androidXLibraryVersion"
 }
 
