--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,11 @@ allprojects {
 ext {
     compileSdkVersion = 29
     buildToolsVersion = '29.0.2'
-    androidXAppCompatVersion = '1.2.0'
-    androidXLibraryVersion = '1.3.0'
+    androidXLibraryVersion = '1.2.0'
+    androidXExifVersion = '1.3.0'
 
     PUBLISH_GROUP_ID = 'com.theartofdev.edmodo'
     PUBLISH_ARTIFACT_ID = 'android-image-cropper'
-    PUBLISH_VERSION = '2.8.0'
+    PUBLISH_VERSION = '2.8.2'
     // gradlew clean build generateRelease
 }
